--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <iframe src="https://storied-melomakarona-42aaeb.netlify.app/" width="100%" height="600px" style="border:none;"></iframe>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
