Added link to quiz page in index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <div id="root"></div>
     <iframe src="https://storied-melomakarona-42aaeb.netlify.app/" width="100%" height="600px" style="border:none;"></iframe>
+    <a href="quiz.html">Go to Quiz</a>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
